# quickjs-uv

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
api/: modules.c  std.c  utils.c  utils.h
src/: main.c  test.js
